test/cli/test-fail-expected/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-fail-expected
policies:
- policy.yaml
resources:
- resource.yaml
results:
- policy: always-pass-policy
  rule: check-label
  kind: Pod
  resources:
  - test-pod
  result: fail  # We expect the rule to fail, but it will actually pass
  
# This demonstrates the bug fixed in PR #XXXX
# Where test expectations that don't match actual results should be marked as failures
